--- a/app/src/main/res/layout/post_featured_item_layout.xml
+++ b/app/src/main/res/layout/post_featured_item_layout.xml
@@ -57,8 +57,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:shadowColor="@color/lightGray"
-                android:shadowRadius="@integer/textShadow"
+                android:shadowColor="@color/black"
+                android:shadowRadius="@integer/md_textShadow"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold"
