--- a/app/src/main/res/layout/post_item_text_fixed_layout.xml
+++ b/app/src/main/res/layout/post_item_text_fixed_layout.xml
@@ -36,6 +36,10 @@
                 style="@style/AppTheme.TextAppearance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/md_padding"
+                android:paddingLeft="@dimen/md_padding"
+                android:paddingRight="@dimen/md_padding"
+                android:paddingStart="@dimen/md_padding"
                 android:shadowColor="@color/lightGray"
                 android:shadowRadius="@integer/textShadow"
                 android:textColor="@color/black"
@@ -97,6 +101,10 @@
                     android:ellipsize="end"
                     android:gravity="start"
                     android:maxLines="6"
+                    android:paddingEnd="@dimen/md_padding"
+                    android:paddingLeft="@dimen/md_padding"
+                    android:paddingRight="@dimen/md_padding"
+                    android:paddingStart="@dimen/md_padding"
                     android:shadowColor="@color/lightGray"
                     android:shadowRadius="@integer/textShadow"
                     android:textAlignment="gravity"
