--- a/app/src/main/res/layout/attachment_item_layout.xml
+++ b/app/src/main/res/layout/attachment_item_layout.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/sm_padding">
 
 
     <android.support.v7.widget.AppCompatImageView
