--- a/app/src/main/res/layout/business_guide_search_layout.xml
+++ b/app/src/main/res/layout/business_guide_search_layout.xml
@@ -33,16 +33,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.almersal.android.views.SearchTagView
-                android:id="@+id/tagSearchView"
+            <com.almersal.android.views.SelectedTagsView
+                android:id="@+id/selectedTagsView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toLeftOf="@+id/SearchBtn"
-                android:layout_toStartOf="@+id/SearchBtn"
+                android:layout_toLeftOf="@+id/searchBtn"
+                android:layout_toStartOf="@+id/searchBtn"
                 android:gravity="center" />
 
             <ImageView
-                android:id="@+id/SearchBtn"
+                android:id="@+id/searchBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
