--- a/app/src/main/res/layout/category_item_layout.xml
+++ b/app/src/main/res/layout/category_item_layout.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/sm_margin"
-                android:background="@drawable/ic_cat_tag_bg"
+                android:background="@drawable/ic_cat_tag_transparent_bg"
                 android:maxLines="1"
                 android:minHeight="@dimen/zero"
                 android:minWidth="@dimen/zero"
