--- a/app/src/main/res/layout/post_details_layout.xml
+++ b/app/src/main/res/layout/post_details_layout.xml
@@ -191,7 +191,8 @@
                                     android:layout_height="wrap_content"
                                     android:text="In Al Mazeh"
                                     android:textColor="@color/white"
-                                    android:textStyle="bold" />
+                                    android:textStyle="bold"
+                                    android:visibility="invisible" />
 
                             </LinearLayout>
 
@@ -335,56 +336,43 @@
                             android:textStyle="bold"
                             app:layout_constraintTop_toBottomOf="@+id/categorySperator" />
 
-
-                        <com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView
-                            android:id="@+id/contactBtnContainer"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/xlg_margin"
-                            android:layout_weight="4"
-                            app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/postDescription"
-                            app:layout_constraintWidth_percent="0.5"
-                            app:ms9_shadowElevation="@dimen/md_elevation">
-
-                            <LinearLayout
-                                style="@style/commonNinePatchShadowItemViewStyle"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/md_margin"
-                                android:background="@drawable/white_radius_bg"
-                                android:padding="@dimen/zero">
-
-
-                                <android.support.v7.widget.AppCompatButton
-                                    android:id="@+id/contactBtn"
-                                    style="@style/AppTheme.NormalButtonStyle"
-                                    android:layout_width="0dp"
-                                    android:layout_height="@dimen/sm_btn_height"
-                                    android:layout_margin="@dimen/zero"
-                                    android:layout_weight="4"
-                                    android:background="@drawable/button_bg"
-                                    android:drawableEnd="@drawable/ic_transparent_bg"
-                                    android:drawableLeft="@drawable/ic_phone_white_24dp"
-                                    android:drawableRight="@drawable/ic_transparent_bg"
-                                    android:drawableStart="@drawable/ic_phone_white_24dp"
-                                    android:elevation="@dimen/elevation"
-                                    android:paddingEnd="@dimen/lg_padding"
-                                    android:paddingLeft="@dimen/lg_padding"
-                                    android:paddingRight="@dimen/lg_padding"
-                                    android:paddingStart="@dimen/lg_padding"
-                                    android:shadowColor="@color/black"
-                                    android:text="@string/Contact"
-                                    android:textColor="@color/white"
-                                    android:textStyle="bold" />
-                            </LinearLayout>
-                        </com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView>
-
-                        <View
+                        <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            app:layout_constraintTop_toBottomOf="@+id/contactBtnContainer" />
+                            android:layout_height="0dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/postDescription">
+
+                            <android.support.v7.widget.AppCompatButton
+                                android:id="@+id/contactBtn"
+                                style="@style/AppTheme.NormalButtonStyle"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/zero"
+                                android:layout_weight="4"
+                                android:background="@drawable/button_bg"
+                                android:drawableEnd="@drawable/ic_transparent_bg"
+                                android:drawableLeft="@drawable/ic_phone_white_24dp"
+                                android:drawableRight="@drawable/ic_transparent_bg"
+                                android:drawableStart="@drawable/ic_phone_white_24dp"
+                                android:paddingEnd="@dimen/lg_padding"
+                                android:paddingLeft="@dimen/lg_padding"
+                                android:paddingRight="@dimen/lg_padding"
+                                android:paddingStart="@dimen/lg_padding"
+                                android:shadowColor="@color/black"
+                                android:text="@string/Contact"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"
+                                app:elevation="@dimen/xxlg_elevation"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintRight_toRightOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintWidth_percent="0.5" />
+
+                        </android.support.constraint.ConstraintLayout>
+
 
                     </android.support.constraint.ConstraintLayout>
 
