--- a/app/src/main/res/layout/product_add_layout.xml
+++ b/app/src/main/res/layout/product_add_layout.xml
@@ -95,6 +95,7 @@
                     android:id="@+id/productTitleLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/lg_margin"
                     android:hint="@string/ProductName"
                     app:errorEnabled="true"
                     app:errorTextAppearance="@style/ErrorText"
