--- a/app/src/main/res/layout/product_manage_layout.xml
+++ b/app/src/main/res/layout/product_manage_layout.xml
@@ -93,11 +93,11 @@
                     android:id="@+id/productTitleLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/lg_margin"
                     android:hint="@string/ProductName"
                     app:errorEnabled="true"
                     app:errorTextAppearance="@style/ErrorText"
                     app:hintTextAppearance="@style/HintText"
-                    app:layout_constraintBottom_toTopOf="@+id/guideLineEmail"
                     app:layout_constraintTop_toBottomOf="@+id/productImageDescription">
 
                     <android.support.design.widget.TextInputEditText
