--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -253,6 +253,8 @@
                             android:layout_height="wrap_content"
                             app:NoConnectionLayout="@layout/state_layout_no_connection_min"
                             app:NoDataLayout="@layout/state_layout_no_data"
+                            app:NoPermisionLayout="@layout/state_layout_no_subscribe_layout"
+                            app:PermissionbtnRes="@+id/subscribeBtn"
                             app:RefreshbtnRes="@+id/retryBtn"
                             app:WaitingLayout="@layout/state_layout_waiting"
                             app:layout_constraintTop_toBottomOf="@id/categorySperator">
