--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent">
+    android:background="@color/colorPrimary">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -12,41 +12,67 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/splashTitle"
-        style="@style/AppTheme.TitleTextAppearance"
+    <!--<android.support.v7.widget.AppCompatTextView-->
+    <!--android:id="@+id/splashTitle"-->
+    <!--style="@style/AppTheme.TitleTextAppearance"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:fadeScrollbars="true"-->
+    <!--android:fadingEdge="horizontal"-->
+    <!--android:shadowColor="@color/white"-->
+    <!--android:shadowRadius="@integer/textShadow"-->
+    <!--android:text="@string/app_name"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:textStyle="bold"-->
+    <!--android:visibility="gone"-->
+    <!--app:autoSizeTextType="uniform"-->
+    <!--app:elevation="4dp"-->
+    <!--app:fontFamily="@font/cairo_bold"-->
+    <!--app:layout_constraintBottom_toTopOf="@+id/logo"-->
+    <!--app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--app:layout_constraintRight_toRightOf="parent" />-->
+
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fadeScrollbars="true"
-        android:fadingEdge="horizontal"
-        android:shadowColor="@color/white"
-        android:shadowRadius="@integer/textShadow"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:autoSizeTextType="uniform"
-        app:elevation="4dp"
-        app:fontFamily="@font/cairo_bold"
-        app:layout_constraintBottom_toTopOf="@+id/logo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/logo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/contentDescription"
-        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.65"
-        app:srcCompat="@drawable/ic_logo" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!--<android.support.v7.widget.AppCompatImageView-->
+        <!--android:id="@+id/logoImageView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@mipmap/ic_launcher" />-->
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/logoTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/contentDescription"
+            android:padding="@dimen/xlg_padding"
+            android:src="@drawable/ic_logo" />
+
+        <!--app:layout_constraintBottom_toBottomOf="@+id/logoImageView"-->
+        <!--app:layout_constraintLeft_toLeftOf="@+id/logoImageView"-->
+        <!--app:layout_constraintStart_toStartOf="@+id/logoImageView"-->
+        <!--app:layout_constraintTop_toTopOf="@+id/logoImageView"-->
+
+
+        <!--app:layout_constraintLeft_toRightOf="@+id/logoImageView"-->
+        <!--app:layout_constraintStart_toEndOf="@+id/logoImageView"-->
+
+        <!--app:layout_constraintBottom_toBottomOf="@+id/logoImageView"-->
+        <!--app:layout_constraintLeft_toRightOf="@+id/logoImageView"-->
+        <!--app:layout_constraintStart_toEndOf="@+id/logoImageView"-->
+        <!--app:layout_constraintTop_toTopOf="@+id/logoImageView"-->
+
+    </android.support.constraint.ConstraintLayout>
+
 
     <!--app:layout_constraintBottom_toTopOf="@+id/guideline"-->
     <!--app:layout_constraintEnd_toEndOf="@+id/splashTitle"-->
