--- a/mainlibrary/src/main/res/values/dimens.xml
+++ b/mainlibrary/src/main/res/values/dimens.xml
@@ -23,6 +23,9 @@
     <dimen name="xlg_margin">32dp</dimen>
     <dimen name="xlg_padding">32dp</dimen>
 
+    <dimen name="xXlg_margin">64dp</dimen>
+    <dimen name="xXlg_padding">64dp</dimen>
+
     <dimen name="si_default_text_size">18sp</dimen>
     <dimen name="si_default_radius_max">24dp</dimen>
     <dimen name="si_default_radius_min">8dp</dimen>
