--- a/mainlibrary/src/main/res/values/styles.xml
+++ b/mainlibrary/src/main/res/values/styles.xml
@@ -9,18 +9,21 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textViewStyle">@style/AppTheme.TextAppearance</item>
         <item name="android:textAppearance">@style/AppTheme.TextAppearance</item>
+
         <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
         <item name="android:dialogTheme">@style/AppTheme.DialogSlideAnim</item>
         <item name="android:alertDialogTheme">@style/AppAlertTheme</item>
     </style>
 
-    <style name="Theme.Transparent"  parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.Transparent" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowIsFloating">true</item>
+        <!--<item name="android:windowIsFloating">true</item>-->
         <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
+        <item name="android:dialogTheme">@style/AppTheme.DialogSlideAnim</item>
         <item name="android:alertDialogTheme">@style/AppAlertTheme</item>
     </style>
 
@@ -32,7 +35,6 @@
         <item name="android:textViewStyle">@style/AppTheme.TextAppearance</item>
         <item name="android:textAppearance">@style/AppTheme.TextAppearance</item>
         <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
-
         <item name="android:dialogTheme">@style/AppTheme.DialogSlideAnim</item>
         <item name="android:alertDialogTheme">@style/AppAlertTheme</item>
     </style>
@@ -76,9 +78,19 @@
         <item name="android:padding">@dimen/xsm_margin</item>
         <item name="android:gravity">start|left</item>
         <item name="android:layout_gravity">left|start</item>
+        <!--<item name="android:spacing">@dimen/spacing</item>-->
+
     </style>
 
     <style name="AppTheme.TextAppearanceCenter" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:padding">@dimen/xsm_margin</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="AppTheme.MediumTextAppearanceCenter" parent="TextAppearance.AppCompat.Medium">
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:padding">@dimen/xsm_margin</item>
