--- a/app/src/main/res/layout/subcategory_subscription_bottom_sheet.xml
+++ b/app/src/main/res/layout/subcategory_subscription_bottom_sheet.xml
@@ -27,6 +27,7 @@
             android:textAlignment="gravity"
             android:textColor="@color/white"
             android:textStyle="bold"
+            android:layout_marginBottom="@dimen/xlg_margin"
             app:layout_constraintBottom_toTopOf="@+id/myCategoriesStateLayout" />
 
         <com.brainsocket.mainlibrary.Views.Stateslayoutview
@@ -54,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="@dimen/md_padding"
+            android:paddingTop="@dimen/xlg_padding"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
