--- a/app/src/main/res/layout/post_item_layout.xml
+++ b/app/src/main/res/layout/post_item_layout.xml
@@ -112,10 +112,10 @@
                     style="@style/AppTheme.TextAppearance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/sm_padding"
-                    android:paddingLeft="@dimen/sm_padding"
-                    android:paddingRight="@dimen/sm_padding"
-                    android:paddingStart="@dimen/sm_padding"
+                    android:paddingEnd="@dimen/md_padding"
+                    android:paddingLeft="@dimen/md_padding"
+                    android:paddingRight="@dimen/md_padding"
+                    android:paddingStart="@dimen/md_padding"
                     android:paddingTop="@dimen/zero"
                     android:textColor="@color/grayDarkTextColor"
                     app:fontFamily="@font/cairo_regular"
@@ -126,7 +126,10 @@
                     style="@style/AppTheme.TextAppearance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/sm_padding"
+                    android:paddingEnd="@dimen/md_padding"
+                    android:paddingStart="@dimen/md_padding"
+                    android:paddingLeft="@dimen/md_padding"
+                    android:paddingRight="@dimen/md_padding"
                     android:layout_margin="@dimen/zero"
                     android:textColor="@color/grayDarkTextColor"
                     app:fontFamily="@font/cairo_regular" />
