--- a/app/src/main/res/layout/signin_layout.xml
+++ b/app/src/main/res/layout/signin_layout.xml
@@ -119,19 +119,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/lg_margin"
                 android:orientation="horizontal"
-                android:weightSum="7"
+                android:weightSum="8"
                 app:layout_constraintTop_toBottomOf="@+id/forgotTextViewLink">
 
                 <View
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="2" />
 
 
                 <com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="5"
+                    android:layout_weight="4"
                     app:ms9_shadowElevation="@dimen/md_elevation">
 
                     <LinearLayout
@@ -169,6 +169,7 @@
                 android:orientation="horizontal"
                 android:paddingBottom="@dimen/lg_padding"
                 android:textAlignment="center"
+                android:layout_marginTop="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/signinBtnContainer">
